update git ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,2 +1,3 @@
 ﻿/backend/.vs/progQuiz
 /backend/src/progQuiz.API/obj/Debug/net8.0/progQuiz.API.AssemblyInfo.cs
+/backend/src/progQuiz.API/bin/Debug/net8.0
